--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,10 @@
 version: "3"
 
 services:
+  cache:
+    image: "redis"
+    ports:
+      - 6379:6379
   database:
     image: "postgres:latest"
     ports:
@@ -9,3 +13,6 @@ services:
       - .env
     volumes:
       - ./db-data/:/var/lib/postgresql/data/
+
+    # For logging queries in development only
+    command: [ "postgres", "-c", "log_statement=all" ]
