--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "Personal Finance Management",
   "main": "main.js",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
+    "redis": "^4.0.6",
     "sequelize": "^6.17.0"
   },
   "devDependencies": {
