--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "lodash": "^4.17.21",
+    "nodemailer": "^6.7.5",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "redis": "^4.0.6",
