--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "redis": "^4.0.6",
-    "sequelize": "^6.17.0"
+    "sequelize": "^6.17.0",
+    "winston": "^3.7.2"
   },
   "devDependencies": {
     "sequelize-cli": "^6.4.1"
