--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "winston": "^3.7.2"
   },
   "devDependencies": {
-    "sequelize-cli": "^6.4.1"
+    "jest": "^28.1.0",
+    "sequelize-cli": "^6.4.1",
+    "supertest": "^6.2.3"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon main.js"
+    "test": "node --experimental-vm-modules node_modules/.bin/jest --coverage",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
